--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -5,6 +5,7 @@ main.header=Restaurant
 main.menu=Menu
 main.basket=Basket
 main.orders=Orders
+main.main=Main
 #main.select.all=All dishes
 menu.category=Category
 menu.dish=Dish
