--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -5,6 +5,7 @@ main.header=Ресторан
 main.menu=Меню
 main.basket=Корзина
 main.orders=Замовлення
+main.main=Головна
 #main.select.all=Всі страви
 menu.category=Категорія
 menu.dish=Страва
