basket done, dish update/delete in progress

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -32,7 +32,7 @@ orders.action=Select order number:
 orders.manager=MANAGER PAGE
 page.current=Current page:
 page.total=Total pages:
-basket.delete=Delete
+button.delete=Delete
 basket.action=Action
 orders.pay=Pay
 payment.str1=Payment for order #
@@ -48,3 +48,7 @@ orders.username=User
 orders.confirm=Confirm
 menu.filter.name=Filter by categories
 menu.filter.all=All categories
+button.update=Update
+dish.name_en=Dish name, on english:
+dish.name_ua=Dish name, on ukrainian:
+dish.update=Update dish data
