--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -32,7 +32,7 @@ orders.action=Виберіть номер замовлення:
 orders.manager=СТОРІНКА МЕНЕДЖЕРА
 page.current=Поточна сторінка:
 page.total=Всього сторінок:
-basket.delete=Видалити
+button.delete=Видалити
 basket.action=Дія
 orders.pay=Оплатити
 payment.str1=Оплата замовлення №
@@ -48,3 +48,7 @@ orders.username=Користувач
 orders.confirm=Підтвердити
 menu.filter.name=Фільтр по категоріям
 menu.filter.all=Всі категорії
+button.update=Змінити
+dish.name_en=Назва страви, англійською:
+dish.name_ua=Назва страви, українською:
+dish.update=Змфнити дані страви
