fix small bugs, custom tag, pagination

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -52,3 +52,7 @@ button.update=Update
 dish.name_en=Dish name, on english:
 dish.name_ua=Dish name, on ukrainian:
 dish.update=Update dish data
+error.page=Error page
+error.forbidden.page=AccessDenied! Forbidden page!
+error.access.denied=AccessDenied! You need to authorize!
+error.for.logged.user=AccessDenied! You need to logout first!
