--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -52,3 +52,7 @@ button.update=Змінити
 dish.name_en=Назва страви, англійською:
 dish.name_ua=Назва страви, українською:
 dish.update=Змфнити дані страви
+error.page=Сторінка помилки
+error.forbidden.page=Доступ заборонений! Заборонена сторінка!
+error.access.denied=Доступ заборонений! Необхідна авторизація!
+error.for.logged.user=Доступ заборонений! Потрібно вийти з системи!
