all javadocs done + create/update/delete dish

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -29,7 +29,6 @@ orders.button=Transfer to next stage
 payment.header=Payment page
 payment.button=Pay
 orders.action=Select order number:
-orders.manager=MANAGER PAGE
 page.current=Current page:
 page.total=Total pages:
 button.delete=Delete
@@ -38,21 +37,26 @@ orders.pay=Pay
 payment.str1=Payment for order #
 payment.str2=, total price:
 payment.str3=\ UAN.
-main.manager=Manage
+main.manage.orders=Manage orders
 db.name=nameEn
 error.signup.email=Email not valid.
 error.signup.password=Password should contains 2-6 symbols.
 error.signup.login=Login cannot be empty.
 error.itemDTO=Id should be non-negative number.
-orders.username=User
+orders.username=Customer
 orders.confirm=Confirm
 menu.filter.name=Filter by categories
 menu.filter.all=All categories
 button.update=Update
 dish.name_en=Dish name, on english:
 dish.name_ua=Dish name, on ukrainian:
-dish.update=Update dish data
+dish.update=Update dish
 error.page=Error page
 error.forbidden.page=AccessDenied! Forbidden page!
 error.access.denied=AccessDenied! You need to authorize!
 error.for.logged.user=AccessDenied! You need to logout first!
+dish.delete.alert=Are you shure you want to delete this dish:
+main.manage.dishes=Manage dishes
+button.create=Create
+dish.create=Create dish
+
