--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -29,7 +29,6 @@ orders.button=Перевести на наступну стадію
 payment.header=Сторінка оплати
 payment.button=Оплатити
 orders.action=Виберіть номер замовлення:
-orders.manager=СТОРІНКА МЕНЕДЖЕРА
 page.current=Поточна сторінка:
 page.total=Всього сторінок:
 button.delete=Видалити
@@ -38,21 +37,26 @@ orders.pay=Оплатити
 payment.str1=Оплата замовлення №
 payment.str2=, всього:
 payment.str3=\ грн.
-main.manager=Управління
+main.manage.orders=Управління замовленнями
 db.name=nameUa
 error.signup.email=Електронна адреса не валідна.
 error.signup.password=Пароль повинен бути 2-6 символівю
 error.signup.login=Логін не може бути пустим.
 error.itemDTO=Це повинно бути невід'ємне число.
-orders.username=Користувач
+orders.username=Клієнт
 orders.confirm=Підтвердити
 menu.filter.name=Фільтр по категоріям
 menu.filter.all=Всі категорії
 button.update=Змінити
 dish.name_en=Назва страви, англійською:
 dish.name_ua=Назва страви, українською:
-dish.update=Змфнити дані страви
+dish.update=Змінити дані страви
 error.page=Сторінка помилки
 error.forbidden.page=Доступ заборонений! Заборонена сторінка!
 error.access.denied=Доступ заборонений! Необхідна авторизація!
 error.for.logged.user=Доступ заборонений! Потрібно вийти з системи!
+dish.delete.alert=Ви впевнені, що хочете видалити цю страву:
+main.manage.dishes=Управління стравами
+button.create=Створити
+dish.create=Створити страву
+
