SQL create tables

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -36,7 +36,7 @@ basket.action=Action
 orders.pay=Pay
 payment.str1=Payment for order #
 payment.str2=, total price:
-payment.str3=\ UAN.
+payment.str3=, UAN.
 main.manage.orders=Manage orders
 db.name=nameEn
 error.signup.email=Email not valid.
