--- a/src/main/resources/messages_ua.properties
+++ b/src/main/resources/messages_ua.properties
@@ -36,7 +36,7 @@ basket.action=Дія
 orders.pay=Оплатити
 payment.str1=Оплата замовлення №
 payment.str2=, всього:
-payment.str3=\ грн.
+payment.str3=, грн.
 main.manage.orders=Управління замовленнями
 db.name=nameUa
 error.signup.email=Електронна адреса не валідна.
